Project slides (cont'd)

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 
 <slide class="class" id="id" style="background:;">
   <hgroup>
-    <h2>Average Temperature Measurement Uncertainty</h2>
+    <h2>Temperature Measurement Uncertainty</h2>
   </hgroup>
   <article data-timings="">
     <p>Temperature <strong>measurement uncertainty</strong> has decreased over time: For example, for New York, United States, the measurements have improved since the early 1900&#39;s. Something to consider when choosing a time period to analyze the data.</p>
@@ -109,12 +109,11 @@
 
 <slide class="class" id="id" style="background:;">
   <hgroup>
-    <h2>Average Temperature Trend and Hypothesis Testing</h2>
+    <h2>Temperature Increase Hypothesis Testing</h2>
   </hgroup>
   <article data-timings="">
-    <p>Hypothesis H0: The temperature in your city has <strong>NOT</strong> increased.</p>
-
-<p>T.Test result: Rejected for all cities in the United States.</p>
+    <p>Hypothesis H0: The temperature in your city has <strong>NOT</strong> increased.
+T.Test result: Rejected for all cities in the United States.</p>
 
 <p><img src="assets/fig/temperature-trend-and-ho-test-1.png" title="plot of chunk temperature-trend-and-ho-test" alt="plot of chunk temperature-trend-and-ho-test" style="display: block; margin: auto;" /></p>
 
@@ -140,13 +139,13 @@
     </li>
     <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=3 title='Average Temperature Measurement Uncertainty'>
+        data-slide=3 title='Temperature Measurement Uncertainty'>
          3
       </a>
     </li>
     <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=4 title='Average Temperature Trend and Hypothesis Testing'>
+        data-slide=4 title='Temperature Increase Hypothesis Testing'>
          4
       </a>
     </li>
