Project slides (cont'd)

--- a/index.html
+++ b/index.html
@@ -56,7 +56,8 @@
 </ul></li>
 <li>Data Exploration</li>
 <li>Statistical Inference</li>
-<li>Check out my <a href="https://brigaldies.shinyapps.io/ClimateChange/">Shinyapp</a>.</li>
+<li>Check out my <a href="https://brigaldies.shinyapps.io/ClimateChange/">Shinyapp</a></li>
+<li>See the code in <a href="https://github.com/brigaldies/ClimateChange">GitHub</a></li>
 </ol>
 
   </article>
@@ -112,10 +113,11 @@
     <h2>Temperature Increase Hypothesis Testing</h2>
   </hgroup>
   <article data-timings="">
-    <p>Hypothesis H0: The temperature in your city has <strong>NOT</strong> increased.
-T.Test result: Rejected for all cities in the United States.</p>
+    <p><strong>Hypothesis H0</strong>: The temperature in your country has <strong>NOT</strong> increased.</p>
 
 <p><img src="assets/fig/temperature-trend-and-ho-test-1.png" title="plot of chunk temperature-trend-and-ho-test" alt="plot of chunk temperature-trend-and-ho-test" style="display: block; margin: auto;" /></p>
+
+<p>Example: <strong>T.Test result</strong>: H0 <strong>Rejected</strong> for New York, Chicago, and Los Angeles in the United States for the 1950-2013 period.</p>
 
   </article>
   <!-- Presenter Notes -->
