Project slides (cont'd)

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 
 <p><img src="assets/fig/temperature-trend-and-ho-test-1.png" title="plot of chunk temperature-trend-and-ho-test" alt="plot of chunk temperature-trend-and-ho-test" style="display: block; margin: auto;" /></p>
 
-<p>Example: <strong>T.Test result</strong>: H0 <strong>Rejected</strong> for New York, Chicago, and Los Angeles in the United States for the 1950-2013 period.</p>
+<p>Example: <strong>T.Test result</strong>: H0 <strong>Rejected</strong> for New York, Chicago, and Los Angeles in the United States for the 1950-2013 period. Consequently, these cities have been warming up since the 50&#39;s.</p>
 
   </article>
   <!-- Presenter Notes -->
